[gd_scene load_steps=6 format=3 uid="uid://ckp088hv7fwbx"]

[ext_resource type="Script" path="res://src/bubble/scripts/bubble.gd" id="1_0yja4"]
[ext_resource type="Shader" path="res://src/shaders/perspective.gdshader" id="1_jmsxh"]
[ext_resource type="PackedScene" uid="uid://dlk5sxu3qpkcb" path="res://src/bubble/scenes/text.tscn" id="2_67nwy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dvrlc"]
shader = ExtResource("1_jmsxh")
shader_parameter/top_left = Vector2(0, 0)
shader_parameter/top_right = Vector2(0, 0)
shader_parameter/bottom_left = Vector2(0, 0)
shader_parameter/bottom_right = Vector2(0, 0)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ovatv"]
blend_mode = 4

[node name="Bubble" type="Control"]
material = SubResource("ShaderMaterial_dvrlc")
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 500.0
script = ExtResource("1_0yja4")

[node name="FirstSubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Text" parent="FirstSubViewport" instance=ExtResource("2_67nwy")]

[node name="FinalTextureRect" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_ovatv")
layout_mode = 0
expand_mode = 1

[connection signal="resized" from="." to="." method="_on_resized"]
